--- a/metadata.yaml
+++ b/metadata.yaml
@@ -52,6 +52,7 @@ subjects:
 - !lcc 'PG'
 - !lcc 'GR'
 - !lcsh 'Folklore -- Estonia'
+- GITenberg
 tableOfContents: "1. Die Goldspinnerinnen\r\n2. Die im Mondschein badenden Jungfrauen\r\
   \n3. Schnellfuß, Flinkhand und Scharfauge\r\n4. Der Tontlawald\r\n5. Der Waise Handmühle\r\
   \n6. Die zwölf Töchter\r\n7. Wie eine Waise unverhofft ihr Glück fand\r\n8. Schlaukopf\r\
